--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
     </style>
   </head>
   <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-Knob/1.2.13/jquery.knob.min.js"/></script>
+
     <div id='root'>
     </div>
     <script src="/static/bundle.js"></script>
