--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-Knob/1.2.13/jquery.knob.min.js"/></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.14/d3.min.js"></script>
     <div id='root'>
     </div>
     <script src="/static/bundle.js"></script>
